crates/glyph-cli/tests/corpus/invalid/case-violation/same_kind_collision_values.glyph
const make_plan = "v1"
const makeplan = "v2"

skill demo()
    description: "Carrier."
    flow:
        return <"x">
